Revert "fix: increase gap between search elements to 25px"
This reverts commit f714b0a7a307ea0a95750602f4815ae1411aa7de.

--- a/public/search.css
+++ b/public/search.css
@@ -7,7 +7,7 @@
  max-width: 500px;
  display: flex;
  flex-wrap: nowrap;
- gap: 25px;
+ gap: 15px;
  align-items: center;
  justify-content: center;
  text-align: center;
